--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,14 +6,14 @@
     <% } %>
 
     <div class="input-box d-flex justify-content-between align-items-center position-relative mb-3 w-100">
-        <input type="email" name="email" class="rounded-pill pl-3 text-white w-100 h-100" placeholder="Email" required>
+        <input type="email" name="email" class="rounded-pill pl-3 text-white w-100 h-100" placeholder="Email" value="<%= email || '' %>" required>
         <ion-icon name="mail-outline"></ion-icon>
     </div>
 
     <div class="input-box d-flex justify-content-between align-items-center position-relative mb-3 w-100">
         <input type="password" name="password" id="passwordInput" class="rounded-pill pl-3 text-white w-100 h-100" placeholder="Password" required>
         <ion-icon name="lock-closed-outline"></ion-icon>
-        <ion-icon id="togglePassword" name="eye-outline" style="cursor: pointer; position: absolute; right: 50px;"></ion-icon>
+        <ion-icon id="togglePassword" name="eye-off-outline" style="cursor: pointer; position: absolute; right: 50px;"></ion-icon>
     </div>
 
     <button type="submit" class="submit-btn btn btn-light rounded-pill w-100">Submit</button>
