--- a/public/style.css
+++ b/public/style.css
@@ -25,11 +25,12 @@ form{
     border-radius: 16px;
     padding: 0 2.8%;
  } 
-.input-box{
-    height: 50px;
-    margin:  20px 0;
+ .input-box {
+    position: relative;
+    height:50px;
+    margin: 30px 0;
 }
-.input-box input{
+.input-box input {
     background: transparent;
     padding-right: 45px;
     outline: none;
@@ -39,6 +40,21 @@ form{
 .input-box input::placeholder{
     color: white;
 }
+
+.input-box .error-message {
+    color: red;
+    font-size: 0.875rem;
+    margin-top: 5px;
+    position: absolute;
+    left: 0;
+    top: 100%; 
+    width: 100%; 
+}
+
+.input-box input.input-error {
+    border: 2px solid red; 
+}
+
 .input-box ion-icon{
     font-size: 22px;
     color: white;
@@ -60,3 +76,9 @@ form{
     border-radius: 20px;
     padding: 0 2.8%;
 }
+
+
+
+
+
+
